home page update

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1436,6 +1436,7 @@ pre code {
         max-width: 100%
     }
 
+
     .row-cols-lg-1>* {
         -ms-flex: 0 0 100%;
         flex: 0 0 100%;
@@ -2243,6 +2244,7 @@ pre code {
 }
 
 @media (max-width: 767.98px) {
+
     .table-responsive-md {
         display: block;
         width: 100%;
@@ -2261,6 +2263,10 @@ pre code {
         width: 100%;
         overflow-x: auto;
         -webkit-overflow-scrolling: touch
+    }
+
+    .dis-0 {
+        display: none;
     }
 
     .table-responsive-lg>.table-bordered {
